          if a new window open on another workspace switches to that
          workspace
        - PointerRaiseDelay focusing fix by Thomas Linder
	- bugfix: enable menu items in window list popup only when appropriate
          (closes bug 217168)
	- change the ppp status applet to decrease the scale when the
          troughput goes down.

1.2.0: 2002-06-30
	- Czech translation by Jan Horak
	- Lithuanian translation updated (Martynas Jocius)

1.2.0pre3: 2002-06-12
	- updated configure platform coverage
        - really fix --with-guievents / compile w/ ESD
        - several memory leaks fixed

1.2.0pre2: 2002-05-26
	- bugfix: TaskBarDoubleHeight has incorrect layout
	- workaround: doNotCover option removed from default winoptions
                      (seems to have problems with GKrellM)
	- bugfix: --with-guievents; esd compile fix

1.2.0pre1: 2002-05-12
	- bugfix: fix syntax error when HAVE_BASENAME is defined
	          (under cygwin for example)
	- bugfix: updated Catalan translation (thanks Toni Cunyat i Alario)
	- bugfix: updated config.guess in order to allow autodetection of more
		  recent architectures
	- bugfix: the network load indicator field `transferred' overflew
		  when > 2Go. Now make use of 64 bits value for the network
		  load (See: bugs.debian.org/118728, thanks Eduard Bloch)
	- bugfix: fix for sefault when TrayDrawBevel=1 (thanks Julien Lemoine)
	- bugfix: fix for a window position which marches up the screen, 
                  noticeable when launching Galeon and Xchat (thanks 
                  Julien Lemoine)
	- bugfix: fix display of taskbar(in hide mode)
	- bugfix: fix logout problem (in icewm-lite)
	- bugfix: height and width problem in maximized mode 
	          (difference of 2 pixels)
	- bugfix: fix problem with xawdecode (in fullscreen mode)
	- bugfix: POP3 mailcheck breaks with some server (Thanks Rob Funk)
	- feature: new translation: Simplified Chinese (Thanks Li Wei Jih)