@@ -2,10 +2,15 @@
  *  IceWM - Simple dynamic array
  *  Copyright (C) 2001 The Authors of IceWM
  *
- *  Release under terms of the GNU General Public License
+ *  Release under terms of the GNU Library General Public License
  *
  *  2001/04/14: Mathias Hasselmann <mathias.hasselmann@gmx.net>
  *  - initial version
+ *  2002/07/31: Mathias Hasselmann <mathias.hasselmann@gmx.net>
+ *  - major rewrite of the code
+ *  - introduced YBaseArray to reduce overhead caused by templates
+ *  - introduced YObjectArray for easy memory management
+ *  - introduced YStringArray
  */
 
 #ifndef __YARRAY_H
